# secure-voting-system

./: .env.example  .gitignore  README.md  SECURITY.md  election_public_key.json  requirements-dev.txt  secure_voting.db
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: app.py  bb.json  cert.pem  key.pem  requirements.txt  secure_voting.db  test_app_integration.py
backend/keys/: private_key_share_1.json  private_key_share_2.json  private_key_share_3.json  private_key_share_4.json  private_key_share_5.json  public_key.json
backend/scripts/: key_ceremony.py
backend/secure-voting-core/: Cargo.toml
backend/secure-voting-core/src/: lib.rs
backend/src/: bulletin_board.py  db.py  hsm.py  hybrid_sss.py  keygen.py  merkle_log.py  sss.py  tally.py  voting.py  zkp.py
backend/static/: style.css
backend/static/js/: api.js
backend/templates/: login.html  results.html  success.html  vote.html
docs/: ARCHITECTURE.md  CRYPTO_SPEC.md  DATA_FORMATS.md  LEGAL_COMPLIANCE.md  REQUIREMENTS.md  THREAT_MODEL.md  USE_CASES.md
scripts/: benchmark_rust.py  demo.py  full_election_simulation.py  generate_certs.sh  simulation_draft.py  test_app_integration.py  test_zkp_manual.py  verifier.py
trustee_storage/usb_chief_election_commissioner/: election_key_shard.json
trustee_storage/usb_chief_justice_representative/: election_key_shard.json
trustee_storage/usb_independent_observer_(iit)/: election_key_shard.json
trustee_storage/usb_president's_secretariat/: election_key_shard.json
trustee_storage/usb_transparency_intl._observer/: election_key_shard.json
(+1 files in other folders)
